[package]
name = "pacbone"
version = "0.0.1"
authors = ["amreo <amreo@live.it>"]

[dependencies]
piston = "0.37.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.47.0"
piston2d-opengl_graphics = "0.53.0"
derive_builder = "0.5.1"
getset = "0.0.6"
config = "0.9"
clap = "2.32"
fps_counter = "1.0.0"